package main

import (
	"context"
	"sync"
	"time"

	pb "github.com/jlgore/corkscrew/internal/proto"
)

// ChangeTracker provides unified change tracking across cloud providers
type ChangeTracker interface {
	QueryChanges(ctx context.Context, req *ChangeQuery) ([]*ChangeEvent, error)
	StreamChanges(req *StreamRequest, stream ChangeEventStream) error
	DetectDrift(ctx context.Context, baseline *DriftBaseline) (*DriftReport, error)
	MonitorChanges(ctx context.Context, callback func(*ChangeEvent)) error
	GetChangeHistory(ctx context.Context, resourceID string) ([]*ChangeEvent, error)
	CreateBaseline(ctx context.Context, resources []*pb.Resource) (*DriftBaseline, error)
}

// ChangeEvent represents a universal change event structure
type ChangeEvent struct {
	ID               string                 `json:"id"`
	Provider         string                 `json:"provider"`
	ResourceID       string                 `json:"resource_id"`
	ResourceName     string                 `json:"resource_name"`
	ResourceType     string                 `json:"resource_type"`
	Service          string                 `json:"service"`
	Project          string                 `json:"project,omitempty"`
	Region           string                 `json:"region,omitempty"`
	ChangeType       ChangeType             `json:"change_type"`
	Severity         ChangeSeverity         `json:"severity"`
	Timestamp        time.Time              `json:"timestamp"`
	DetectedAt       time.Time              `json:"detected_at"`
	PreviousState    *ResourceState         `json:"previous_state,omitempty"`
	CurrentState     *ResourceState         `json:"current_state,omitempty"`
	ChangedFields    []string               `json:"changed_fields"`
	ChangeMetadata   map[string]interface{} `json:"change_metadata"`
	ImpactAssessment *ImpactAssessment      `json:"impact_assessment,omitempty"`
	ComplianceImpact *ComplianceImpact      `json:"compliance_impact,omitempty"`
	RelatedChanges   []string               `json:"related_changes,omitempty"`
}

// ResourceState represents the state of a resource at a point in time
type ResourceState struct {
	ResourceID   string                 `json:"resource_id"`
	Timestamp    time.Time              `json:"timestamp"`
	Properties   map[string]interface{} `json:"properties"`
	Tags         map[string]string      `json:"tags"`
	IAMPolicies  []IAMPolicy            `json:"iam_policies,omitempty"`
	Status       string                 `json:"status"`
	Configuration map[string]interface{} `json:"configuration"`
	Checksum     string                 `json:"checksum"`
}

// IAMPolicy represents an IAM policy
type IAMPolicy struct {
	PolicyID    string                 `json:"policy_id"`
	PolicyName  string                 `json:"policy_name"`
	PolicyType  string                 `json:"policy_type"`
	Statements  []map[string]interface{} `json:"statements"`
	Attachments []string               `json:"attachments"`
}

// ChangeQuery defines parameters for querying changes
type ChangeQuery struct {
	Provider       string        `json:"provider,omitempty"`
	ResourceFilter *ResourceFilter `json:"resource_filter,omitempty"`
	ChangeTypes    []ChangeType    `json:"change_types,omitempty"`
	Severities     []ChangeSeverity `json:"severities,omitempty"`
	StartTime      time.Time       `json:"start_time"`
	EndTime        time.Time       `json:"end_time"`
	Limit          int             `json:"limit,omitempty"`
	Offset         int             `json:"offset,omitempty"`
	SortBy         string          `json:"sort_by,omitempty"`
	SortOrder      string          `json:"sort_order,omitempty"`
}

// ResourceFilter defines resource filtering criteria
type ResourceFilter struct {
	ResourceIDs   []string          `json:"resource_ids,omitempty"`
	ResourceTypes []string          `json:"resource_types,omitempty"`
	Services      []string          `json:"services,omitempty"`
	Projects      []string          `json:"projects,omitempty"`
	Regions       []string          `json:"regions,omitempty"`
	Tags          map[string]string `json:"tags,omitempty"`
}

// StreamRequest defines parameters for streaming changes
type StreamRequest struct {
	Query        *ChangeQuery `json:"query"`
	BufferSize   int          `json:"buffer_size,omitempty"`
	BatchTimeout time.Duration `json:"batch_timeout,omitempty"`
}

// ChangeEventStream interface for streaming change events
type ChangeEventStream interface {
	Send(*ChangeEvent) error
	Context() context.Context
}

// ImpactAssessment provides analysis of change impact
type ImpactAssessment struct {
	SecurityImpact    SecurityImpact    `json:"security_impact"`
	CostImpact        CostImpact        `json:"cost_impact"`
	PerformanceImpact PerformanceImpact `json:"performance_impact"`
	AvailabilityImpact AvailabilityImpact `json:"availability_impact"`
	RiskScore         float64           `json:"risk_score"`
	Recommendations   []string          `json:"recommendations"`
}

// SecurityImpact assesses security implications of changes
type SecurityImpact struct {
	Level           ChangeSeverity `json:"level"`
	IAMChanges      bool          `json:"iam_changes"`
	NetworkChanges  bool          `json:"network_changes"`
	EncryptionChanges bool        `json:"encryption_changes"`
	PublicAccess    bool          `json:"public_access"`
	Vulnerabilities []string      `json:"vulnerabilities,omitempty"`
}

// CostImpact assesses financial implications
type CostImpact struct {
	Level            ChangeSeverity `json:"level"`
	EstimatedChange  float64       `json:"estimated_change"`
	Currency         string        `json:"currency"`
	CostDrivers      []string      `json:"cost_drivers"`
	OptimizationTips []string      `json:"optimization_tips"`
}

// PerformanceImpact assesses performance implications
type PerformanceImpact struct {
	Level           ChangeSeverity `json:"level"`
	LatencyImpact   string        `json:"latency_impact"`
	ThroughputImpact string       `json:"throughput_impact"`
	ResourceUsage   string        `json:"resource_usage"`
}

// AvailabilityImpact assesses availability implications
type AvailabilityImpact struct {
	Level         ChangeSeverity `json:"level"`
	DowntimeRisk  string        `json:"downtime_risk"`
	SLAImpact     string        `json:"sla_impact"`
	RecoveryTime  string        `json:"recovery_time"`
}

// ComplianceImpact assesses compliance implications
type ComplianceImpact struct {
	Level              ChangeSeverity    `json:"level"`
	AffectedFrameworks []string         `json:"affected_frameworks"`
	ComplianceRisk     string           `json:"compliance_risk"`
	RequiredActions    []ComplianceAction `json:"required_actions"`
}

// ComplianceAction represents a required compliance action
type ComplianceAction struct {
	Framework   string `json:"framework"`
	Action      string `json:"action"`
	Deadline    string `json:"deadline"`
	Priority    string `json:"priority"`
	Owner       string `json:"owner,omitempty"`
}

// DriftBaseline represents a configuration baseline for drift detection
type DriftBaseline struct {
	ID           string                    `json:"id"`
	Name         string                    `json:"name"`
	Description  string                    `json:"description"`
	Provider     string                    `json:"provider"`
	CreatedAt    time.Time                 `json:"created_at"`
	UpdatedAt    time.Time                 `json:"updated_at"`
	Resources    map[string]*ResourceState `json:"resources"`
	Policies     []BaselinePolicy          `json:"policies"`
	Tags         map[string]string         `json:"tags"`
	Version      string                    `json:"version"`
	Active       bool                      `json:"active"`
}

// BaselinePolicy defines a policy rule for drift detection
type BaselinePolicy struct {
	ID          string            `json:"id"`
	Name        string            `json:"name"`
	Description string            `json:"description"`
	RuleType    string            `json:"rule_type"`
	Rules       map[string]interface{} `json:"rules"`
	Severity    ChangeSeverity    `json:"severity"`
	Enabled     bool              `json:"enabled"`
}

// DriftReport contains the results of drift detection
type DriftReport struct {
	ID              string          `json:"id"`
	BaselineID      string          `json:"baseline_id"`
	GeneratedAt     time.Time       `json:"generated_at"`
	TotalResources  int             `json:"total_resources"`
	DriftedResources int            `json:"drifted_resources"`
	DriftItems      []*DriftItem    `json:"drift_items"`
	Summary         *DriftSummary   `json:"summary"`
	ComplianceStatus *ComplianceStatus `json:"compliance_status"`
}

// DriftItem represents a specific drift detection
type DriftItem struct {
	ResourceID      string            `json:"resource_id"`
	ResourceType    string            `json:"resource_type"`
	DriftType       string            `json:"drift_type"`
	Severity        ChangeSeverity    `json:"severity"`
	Description     string            `json:"description"`
	DetectedAt      time.Time         `json:"detected_at"`
	BaselineValue   interface{}       `json:"baseline_value"`
	CurrentValue    interface{}       `json:"current_value"`
	Field           string            `json:"field"`
	PolicyViolated  string            `json:"policy_violated,omitempty"`
	Remediation     *RemediationSuggestion `json:"remediation,omitempty"`
}

// DriftSummary provides aggregated drift information
type DriftSummary struct {
	HighSeverityCount     int                      `json:"high_severity_count"`
	MediumSeverityCount   int                      `json:"medium_severity_count"`
	LowSeverityCount      int                      `json:"low_severity_count"`
	CriticalSeverityCount int                      `json:"critical_severity_count"`
	DriftByType          map[string]int           `json:"drift_by_type"`
	DriftByService       map[string]int           `json:"drift_by_service"`
	ComplianceScore      float64                  `json:"compliance_score"`
	Recommendations      []string                 `json:"recommendations"`
}

// ComplianceStatus provides compliance assessment
type ComplianceStatus struct {
	OverallScore    float64                    `json:"overall_score"`
	FrameworkScores map[string]float64         `json:"framework_scores"`
	Violations      []ComplianceViolation      `json:"violations"`
	Recommendations []ComplianceRecommendation `json:"recommendations"`
}

// ComplianceViolation represents a compliance violation
type ComplianceViolation struct {
	Framework   string         `json:"framework"`
	Rule        string         `json:"rule"`
	Severity    ChangeSeverity `json:"severity"`
	ResourceID  string         `json:"resource_id"`
	Description string         `json:"description"`
	Remediation string         `json:"remediation"`
}

// ComplianceRecommendation provides compliance improvement suggestions
type ComplianceRecommendation struct {
	Framework   string `json:"framework"`
	Priority    string `json:"priority"`
	Description string `json:"description"`
	Action      string `json:"action"`
	Impact      string `json:"impact"`
}

// RemediationSuggestion provides automated remediation options
type RemediationSuggestion struct {
	Type            string                 `json:"type"`
	Description     string                 `json:"description"`
	AutomationLevel string                 `json:"automation_level"`
	Commands        []string               `json:"commands,omitempty"`
	Scripts         []string               `json:"scripts,omitempty"`
	Documentation   string                 `json:"documentation,omitempty"`
	EstimatedTime   string                 `json:"estimated_time"`
	RiskLevel       ChangeSeverity         `json:"risk_level"`
	Prerequisites   []string               `json:"prerequisites,omitempty"`
	Metadata        map[string]interface{} `json:"metadata,omitempty"`
}

// BaseChangeTracker provides shared functionality for all provider implementations
type BaseChangeTracker struct {
	provider       string
	storage        ChangeStorage
	analytics      *ChangeAnalytics
	alerting       *AlertingSystem
	cache          *ChangeCache
	mu             sync.RWMutex
	config         *ChangeTrackerConfig
}

// ChangeTrackerConfig provides configuration for change tracking
type ChangeTrackerConfig struct {
	Provider               string        `json:"provider"`
	EnableRealTimeMonitoring bool         `json:"enable_real_time_monitoring"`
	ChangeRetention        time.Duration `json:"change_retention"`
	DriftCheckInterval     time.Duration `json:"drift_check_interval"`
	AlertingEnabled        bool          `json:"alerting_enabled"`
	AnalyticsEnabled       bool          `json:"analytics_enabled"`
	CacheEnabled           bool          `json:"cache_enabled"`
	CacheTTL               time.Duration `json:"cache_ttl"`
	MaxConcurrentStreams   int           `json:"max_concurrent_streams"`
	BatchSize              int           `json:"batch_size"`
	MaxQueryTimeRange      time.Duration `json:"max_query_time_range"`
}

// ChangeStorage interface for persisting change data
type ChangeStorage interface {
	StoreChange(change *ChangeEvent) error
	StoreChanges(changes []*ChangeEvent) error
	QueryChanges(query *ChangeQuery) ([]*ChangeEvent, error)
	GetChangeHistory(resourceID string) ([]*ChangeEvent, error)
	GetChange(changeID string) (*ChangeEvent, error)
	DeleteChanges(olderThan time.Time) error
	
	// Baseline management
	StoreBaseline(baseline *DriftBaseline) error
	GetBaseline(baselineID string) (*DriftBaseline, error)
	ListBaselines(provider string) ([]*DriftBaseline, error)
	UpdateBaseline(baseline *DriftBaseline) error
	DeleteBaseline(baselineID string) error
}

// ChangeCache provides caching for change tracking operations
type ChangeCache struct {
	changes   map[string]*ChangeEvent
	queries   map[string]*CachedQuery
	mu        sync.RWMutex
	ttl       time.Duration
	maxSize   int
}

// CachedQuery represents a cached query result
type CachedQuery struct {
	Query     *ChangeQuery   `json:"query"`
	Results   []*ChangeEvent `json:"results"`
	CachedAt  time.Time      `json:"cached_at"`
	ExpiresAt time.Time      `json:"expires_at"`
}

// Placeholder types for components that aren't implemented yet
type ChangeAnalytics struct {
	storage ChangeStorage
}

type AlertingSystem struct {
}

func NewChangeAnalytics(storage ChangeStorage) *ChangeAnalytics {
	return &ChangeAnalytics{storage: storage}
}

func NewAlertingSystem() *AlertingSystem {
	return &AlertingSystem{}
}

func NewChangeCache(ttl time.Duration, maxSize int) *ChangeCache {
	return &ChangeCache{
		changes:  make(map[string]*ChangeEvent),
		queries:  make(map[string]*CachedQuery),
		ttl:      ttl,
		maxSize:  maxSize,
	}
}