package main

import (
	"fmt"

	pb "github.com/jlgore/corkscrew/internal/proto"
	"k8s.io/apimachinery/pkg/apis/meta/v1/unstructured"
)

// RelationshipMapper extracts relationships between Kubernetes resources
type RelationshipMapper struct{}

// NewRelationshipMapper creates a new relationship mapper
func NewRelationshipMapper() *RelationshipMapper {
	return &RelationshipMapper{}
}

// ExtractRelationships extracts relationships from unstructured Kubernetes resources
func (rm *RelationshipMapper) ExtractRelationships(resource *unstructured.Unstructured) []*pb.Relationship {
	var relationships []*pb.Relationship

	// Extract owner references (parent-child relationships)
	ownerRefs := resource.GetOwnerReferences()
	for _, ownerRef := range ownerRefs {
		rel := &pb.Relationship{
			TargetId:         string(ownerRef.UID),
			TargetType:       ownerRef.Kind,
			TargetService:    "kubernetes",
			RelationshipType: "owned-by",
			Properties: map[string]string{
				"controller":         fmt.Sprintf("%v", ownerRef.Controller != nil && *ownerRef.Controller),
				"blockOwnerDeletion": fmt.Sprintf("%v", ownerRef.BlockOwnerDeletion != nil && *ownerRef.BlockOwnerDeletion),
				"target_name":        ownerRef.Name,
				"target_namespace":   resource.GetNamespace(),
				"source_name":        resource.GetName(),
				"source_namespace":   resource.GetNamespace(),
				"source_type":        resource.GetKind(),
			},
		}
		relationships = append(relationships, rel)
	}

	// TODO: Add more relationship extraction logic for:
	// - Pod volume mounts
	// - Service selectors
	// - Ingress backends
	// - Deployment -> ReplicaSet -> Pod chains
	// - StatefulSet volume claims
	// - etc.

	return relationships
}

// ExtractPodRelationships extracts Pod-specific relationships
func (rm *RelationshipMapper) ExtractPodRelationships(pod *unstructured.Unstructured) []*pb.Relationship {
	var relationships []*pb.Relationship

	// For now, just return empty slice
	// TODO: Implement pod volume mount relationships, service account relationships, etc.
	
	return relationships
}

// ExtractServiceRelationships extracts Service-specific relationships
func (rm *RelationshipMapper) ExtractServiceRelationships(service *unstructured.Unstructured) []*pb.Relationship {
	var relationships []*pb.Relationship

	// For now, just return empty slice
	// TODO: Implement service selector relationships
	
	return relationships
}